# fjwrap

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yml  compose.yml.example
crates/fjwrap-bin/: Cargo.toml
crates/fjwrap-bin/src/: main.rs
crates/fjwrap-client/: Cargo.toml
crates/fjwrap-client/src/: remote.rs
crates/fjwrap-core/: Cargo.toml
crates/fjwrap-core/src/: error.rs  lib.rs  local.rs  traits.rs
crates/fjwrap-distributed/: Cargo.toml
crates/fjwrap-distributed/src/: lib.rs  server.rs
crates/fjwrap-distributed/src/routing/: error.rs  router.rs  traits.rs  types.rs
crates/fjwrap-distributed/src/server/: server.rs
crates/fjwrap-proto/proto/: cluster.proto  fjwrap.proto  kv.proto  raft.proto
crates/fjwrap-proto/src/: lib.rs
crates/kvwrap/: Cargo.toml
crates/kvwrap-bin/: Cargo.toml
crates/kvwrap-bin/src/: main.rs
crates/kvwrap-client/: Cargo.toml
crates/kvwrap-client/src/: remote.rs
crates/kvwrap-core/: Cargo.toml
crates/kvwrap-core/src/: config.rs  error.rs  lib.rs  traits.rs  watch.rs
crates/kvwrap-core/src/backend/: fjall.rs  mod.rs  sled.rs
crates/kvwrap-distributed/: Cargo.toml
crates/kvwrap-distributed/src/: lib.rs
crates/kvwrap-distributed/src/routing/: error.rs  mod.rs  router.rs  traits.rs  types.rs
crates/kvwrap-distributed/src/server/: server.rs
crates/kvwrap-proto/: Cargo.toml  build.rs
crates/kvwrap-proto/proto/: cluster.proto  kv.proto  raft.proto
crates/kvwrap-proto/src/: lib.rs
crates/kvwrap/src/: lib.rs
