[package]
name = "fjwrap-bin"
version.workspace = true
edition.workspace = true
description = "Fjwrap binary runner"

[[bin]]
name = "fjwrap"
path = "src/main.rs"

[dependencies]
fjwrap = { path = "../fjwrap", features = ["distributed"] }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
fracturedjson = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }