[package]
name = "kvwrap-bin"
version.workspace = true
edition.workspace = true
description = "kvwrap binary runner"

[[bin]]
name = "kvwrap"
path = "src/main.rs"

[dependencies]
kvwrap = { path = "../kvwrap", features = ["distributed"] }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
fracturedjson = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
