[package]
name = "kvwrap-client"
version.workspace = true
edition.workspace = true
description = "Lightweight client for kvwrap clusters"

[dependencies]
kvwrap-core = { path = "../kvwrap-core" }
kvwrap-proto = { path = "../kvwrap-proto" }
async-trait = { workspace = true }
async-compat = { workspace = true }
tonic = { workspace = true }
blocking = { workspace = true }
futures-lite = { workspace = true }
async-channel = { workspace = true }
tracing = { workspace = true }
