[package]
name = "kvwrap-distributed"
version.workspace = true
edition.workspace = true
description = "Distributed capabilities for kvwrap"

[dependencies]
kvwrap-core = { path = "../kvwrap-core" }
kvwrap-proto = { path = "../kvwrap-proto" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }