[package]
name = "kvwrap-proto"
version.workspace = true
edition.workspace = true
description = "Protobuf definitiaons for kvwrap"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
serde = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tonic-prost-build", "prost", "serde", "tonic-prost"]